# docgetter

./: .gitignore  CONTRIBUTING.md  README.md  setup.cfg
.github/workflows/: publish.yml
scripts/: build.py
src/docgetter/: __init__.py  main.py  parser.py
