[metadata]
name = docgetter
version = 0.1.1
author = Vincent Lin
author_email = vinlin24@outlook.com
license = MIT
license_file = LICENSE
description = Command line shortcut for opening Python documentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vinlin24/docgetter
project_urls =
    Bug Tracker = https://github.com/vinlin24/docgetter/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages =
    docgetter
python_requires = >=3.7

[options.entry_points]
console_scripts = 
    docs = docgetter.main:main
